--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,8 @@ body {
   font: 16px / 1.5 "Open Sans", Helvetica, Arial, sans-serif;
   font-weight: normal;
   background-size: 400px 400px, 10px 10px;
-  color: black
+  color: black;
+  overflow: hidden;
 }
 
 @media (max-width: 736px) {
